--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "@react-three/postprocessing": "^2.16.0",
+    "@xyflow/react": "^12.10.0",
     "framer-motion": "^12.23.26",
     "gsap": "^3.12.5",
     "howler": "^2.2.4",
